# py-husky

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: README.md  basic_example.py  commit_msg_validator.py  pre-commit  pre-push
py_husky/: __init__.py  __main__.py  cli.py  core.py  runner.py
tests/: 1_init.sh  2_add_hook.sh  3_hook_execution.sh  4_config_yaml.sh  5_not_git_dir.sh  6_uninstall.sh  README.md  __init__.py  functions.sh  run_tests.sh
